footer design added

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,5 +1,7 @@
-<app-header />
-<main class="container">
-  <router-outlet />
-</main>
+<div class="d-flex flex-column min-vh-100">
+  <app-header />
+  <main class="flex-fill container py-3">
+    <router-outlet />
+  </main>
+</div>
 <app-footer />
