--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="p-3 bg-dark text-light d-flex justify-content-end">
+  <div>
+    <span class="mb-3 mb-md-0 text-secondary">
+      &copy; {{ currentYear }},
+      <a
+        href="https://www.enosisbd.com"
+        target="_blank"
+        class="text-secondary text-decoration-none"
+      >
+        Enosis Solutions
+      </a>
+    </span>
+  </div>
+</footer>
