--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,9 +1,22 @@
-<ag-grid-angular
-  style="height: 500px"
-  [rowData]="projects()"
-  [columnDefs]="colDefs"
-  [defaultColDef]="defaultColDef"
-  [pagination]="true"
-  [paginationPageSize]="10"
-  [paginationPageSizeSelector]="[10, 20, 50, 100]"
-/>
+<div class="screen">
+  <div class="row">
+    <div class="col-lg-6">
+      <h3 class="h3">Projects</h3>
+    </div>
+    <div class="col-lg-6">
+      <div echarts [options]="options" style="height: 200px"></div>
+    </div>
+  </div>
+
+  <div>
+    <ag-grid-angular
+      style="height: 500px"
+      [rowData]="projects()"
+      [columnDefs]="colDefs"
+      [defaultColDef]="defaultColDef"
+      [pagination]="true"
+      [paginationPageSize]="10"
+      [paginationPageSizeSelector]="[10, 20, 50, 100]"
+    />
+  </div>
+</div>
