--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,7 +4,12 @@
       <h3 class="h3">Projects</h3>
     </div>
     <div class="col-lg-6">
-      <div echarts [options]="options" style="height: 200px"></div>
+      <div
+        echarts
+        [options]="options"
+        [merge]="pieChartData()"
+        style="height: 200px"
+      ></div>
     </div>
   </div>
 
